src/styles.css
:root {
  --default-font-family: "Roboto", sans-serif;
  --button-font-family: "Montserrat", sans-serif;
  --primary-color: #141517;
  --secondary-color: #f65282;
}

body {
  background-color: var(--primary-color);
  margin-bottom: 50px;
}

h1 {
  color: white;
  font-family: var(--default-font-family);
  font-weight: bold;
  text-transform: uppercase;
  font-size: 72px;
  margin-bottom: 25px;
}

h2 {
  color: white;
  font-family: var(--default-font-family);
  font-weight: regular;
  text-transform: uppercase;
  font-size: 24px;
  line-height: 28px;
  margin-bottom: 25px;
}

p {
  color: white;
  font-family: var(--default-font-family);
  font-weight: lighter;
  font-size: 18px;
  margin-bottom: 48px;
}

a {
  font-family: var(--button-font-family);
  text-transform: uppercase;
  color: black;
  text-decoration: none;
  padding: 18px 30px;
  background: white;
  font-size: 14px;
  border-radius: 50px;
}
hr {
  color: white;
  width: 600px;
  display: block;
  margin: 30px auto;
}

img {
  border-radius: 15px;
}

.container h1 {
  font-size: 40px;
}

.hero {
  text-align: center;
  background-image: url("/images/rose.jpg");
  padding-top: 276px;
  padding-bottom: 301px;
  background-size: cover;
}

.featured {
  text-align: center;
  font-weight: bold;
  font-size: 25px;
}

@media (max-width: 576px) {
  h1 {
    font-size: 35px;
  }
  h2 {
    font-size: 20px;
  }
  p {
    font-size: 15px;
  }
  a {
    font-size: 12px;
  }
  .hero {
    padding-top: 100px;
    padding-bottom: 100px;
  }
  hr {
    max-width: 350px;
  }
  .container {
    text-align: center;
  }

  .container h1 {
    font-size: 30px;
    margin-top: 15px;
  }
}

